--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
   "license": "MIT",
   "scripts": {
     "analyze": "node ./internals/scripts/analyze.js",
-    "npmcheckversion": "node ./internals/scripts/npmcheckversion.js",
-    "preinstall": "npm run npmcheckversion",
-    "postinstall": "npm run build:dll",
     "prebuild": "npm run test && npm run build:clean",
     "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p",
     "build:clean": "rimraf ./build/*",
@@ -25,10 +22,6 @@
     "start:production": "npm run build && npm run start:prod",
     "start:prod": "cross-env NODE_ENV=production node server",
     "pagespeed": "node ./internals/scripts/pagespeed.js",
-    "presetup": "npm i chalk",
-    "setup": "node ./internals/scripts/setup.js",
-    "postsetup": "npm run build:dll",
-    "clean": "shjs ./internals/scripts/clean.js",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern internals/scripts",
     "lint:js": "npm run lint:eslint -- . ",
@@ -121,28 +114,16 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.7.4",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1"
+  },
+  "devDependencies": {
     "chalk": "^1.1.3",
+    "sanitize.css": "^3.3.0",
+    "whatwg-fetch": "^1.0.0",
     "compression": "^1.6.1",
     "express": "^4.13.4",
     "fontfaceobserver": "^1.7.1",
-    "history": "^2.1.0",
-    "immutable": "^3.8.1",
-    "ip": "^1.1.2",
-    "minimist": "^1.2.0",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.3.0",
-    "react-router-redux": "^4.0.4",
-    "react-router-scroll": "^0.2.0",
-    "redux": "^3.5.2",
-    "redux-immutable": "^3.0.6",
-    "redux-saga": "^0.10.0",
-    "reselect": "^2.5.1",
-    "sanitize.css": "^3.3.0",
-    "whatwg-fetch": "^1.0.0"
-  },
-  "devDependencies": {
     "babel-core": "^6.7.7",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
@@ -163,7 +144,6 @@
     "css-loader": "^0.23.1",
     "enzyme": "^2.2.0",
     "eslint": "^2.10.1",
-    "eslint-config-airbnb": "^9.0.1",
     "eslint-import-resolver-webpack": "^0.2.4",
     "eslint-plugin-import": "^1.8.0",
     "eslint-plugin-jsx-a11y": "^1.2.0",
