--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "license": "MIT",
   "scripts": {
     "analyze": "node ./internals/scripts/analyze.js",
-    "prebuild": "npm run test && npm run build:clean",
+    "prebuild": "npm run build:clean",
     "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p",
-    "build:clean": "rimraf ./build/*",
+    "build:clean": "rimraf ./dist/*",
     "build:dll": "node ./internals/scripts/dependencies.js",
     "start": "cross-env NODE_ENV=development node server",
     "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node server",
