--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
   "author": "Max Stoiber",
   "license": "MIT",
   "scripts": {
-    "analyze": "node ./internals/scripts/analyze.js",
+    "analyze": "node ./build/scripts/analyze.js",
     "prebuild": "npm run build:clean",
-    "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p",
+    "build": "cross-env NODE_ENV=production webpack --config build/webpack/webpack.prod.babel.js --color -p",
     "build:clean": "rimraf ./dist/*",
-    "build:dll": "node ./internals/scripts/dependencies.js",
+    "build:dll": "node ./build/scripts/dependencies.js",
     "start": "cross-env NODE_ENV=development node server",
     "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node server",
     "start:production": "npm run build && npm run start:prod",
     "start:prod": "cross-env NODE_ENV=production node server",
-    "pagespeed": "node ./internals/scripts/pagespeed.js",
+    "pagespeed": "node ./build/scripts/pagespeed.js",
     "lint": "npm run lint:js && npm run lint:css",
-    "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern internals --ignore-pattern server/",
+    "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern build --ignore-pattern server/",
     "lint:js": "npm run lint:eslint -- . ",
     "lint:css": "stylelint ./app/**/*.css",
     "lint:staged": "lint-staged",
     "pretest": "npm run lint",
-    "test": "cross-env NODE_ENV=test karma start internals/testing/karma.conf.js --single-run",
+    "test": "cross-env NODE_ENV=test karma start build/testing/karma.conf.js --single-run",
     "test:watch": "npm run test -- --auto-watch --no-single-run",
     "test:firefox": "npm run test -- --browsers Firefox",
     "test:safari": "npm run test -- --browsers Safari",
