--- a/package.json
+++ b/package.json
@@ -99,12 +99,6 @@
     "react-dom": "^15.0.1"
   },
   "devDependencies": {
-    "chalk": "^1.1.3",
-    "sanitize.css": "^3.3.0",
-    "whatwg-fetch": "^1.0.0",
-    "compression": "^1.6.1",
-    "express": "^4.13.4",
-    "fontfaceobserver": "^1.7.1",
     "babel-core": "^6.7.7",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
@@ -119,7 +113,9 @@
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.4.2",
+    "chalk": "^1.1.3",
     "cheerio": "^0.20.0",
+    "compression": "^1.6.1",
     "coveralls": "^2.11.9",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
@@ -133,8 +129,10 @@
     "expect": "^1.18.0",
     "expect-jsx": "^2.5.1",
     "exports-loader": "^0.6.3",
+    "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "fontfaceobserver": "^1.7.1",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.16.0",
     "image-webpack-loader": "^1.8.0",
@@ -158,23 +156,23 @@
     "minimist": "^1.2.0",
     "mocha": "^2.4.5",
     "ngrok": "2.1.8",
+    "node-sass": "^3.8.0",
     "null-loader": "^0.1.1",
     "offline-plugin": "^3.2.0",
-    "postcss-cssnext": "^2.5.2",
-    "postcss-focus": "^1.0.0",
-    "postcss-loader": "^0.9.1",
-    "postcss-reporter": "^1.3.3",
     "pre-commit": "^1.1.3",
     "psi": "^2.0.3",
     "rimraf": "^2.5.2",
+    "sanitize.css": "^3.3.0",
+    "sass-loader": "^4.0.0",
     "shelljs": "^0.7.0",
     "sinon": "^2.0.0-pre",
     "style-loader": "^0.13.1",
     "stylelint": "^6.3.3",
     "stylelint-config-standard": "^8.0.0",
     "url-loader": "^0.5.7",
-    "webpack": "2.1.0-beta.13",
+    "webpack": "^2.1.0-beta.13",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "webpack-hot-middleware": "^2.10.0",
+    "whatwg-fetch": "^1.0.0"
   }
 }
