--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lint": "npm run lint:js && npm run lint:css",
     "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern build --ignore-pattern server/",
     "lint:js": "npm run lint:eslint -- . ",
-    "lint:css": "stylelint ./app/**/*.css",
+    "lint:css": "stylelint ./app/**/*.scss",
     "lint:staged": "lint-staged",
     "pretest": "npm run lint",
     "test": "cross-env NODE_ENV=test karma start build/testing/karma.conf.js --single-run",
@@ -37,7 +37,7 @@
   },
   "lint-staged": {
     "lint:eslint": "*.js",
-    "stylelint": "*.css"
+    "stylelint": "*.scss"
   },
   "pre-commit": "lint:staged",
   "babel": {
@@ -57,23 +57,6 @@
           "transform-react-inline-elements"
         ]
       }
-    }
-  },
-  "stylelint": {
-    "extends": "stylelint-config-standard",
-    "rules": {
-      "color-hex-case": "upper",
-      "string-quotes": "single",
-      "font-family-name-quotes": "always-where-recommended",
-      "selector-pseudo-class-no-unknown": [
-        true,
-        {
-          "ignorePseudoClasses": [
-            "global"
-          ]
-        }
-      ],
-      "indentation": 2
     }
   },
   "dllPlugin": {
