added phantomjs to karma

--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "lint:js": "npm run lint:eslint -- . ",
     "lint:css": "stylelint ./app/**/*.scss",
     "lint:staged": "lint-staged",
-    "pretest": "npm run lint",
     "test": "cross-env NODE_ENV=test karma start build/testing/karma.conf.js --single-run",
     "test:watch": "npm run test -- --auto-watch --no-single-run",
     "test:firefox": "npm run test -- --browsers Firefox",
     "test:safari": "npm run test -- --browsers Safari",
+    "test:chrome": "npm run test -- --browsers Chrome",
     "test:ie": "npm run test -- --browsers IE",
     "coveralls": "cat ./coverage/lcov/lcov.info | coveralls"
   },
@@ -131,6 +131,7 @@
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.0.1",
     "karma-mocha-reporter": "^2.0.3",
+    "karma-phantomjs-launcher": "^1.0.1",
     "karma-safari-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
@@ -151,7 +152,6 @@
     "sinon": "^2.0.0-pre",
     "style-loader": "^0.13.1",
     "stylelint": "^6.3.3",
-    "stylelint-config-standard": "^8.0.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.13",
     "webpack-dev-middleware": "^1.6.1",
