--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "react-boilerplate",
-  "version": "3.0.0",
-  "description": "A highly scalable, offline-first foundation with the best DX and a focus on performance and best practices",
+  "version": "0.0.0",
   "repository": {
-    "type": "git",
-    "url": "git://github.com/mxstbr/react-boilerplate.git"
+    "type": "git"
   },
   "engines": {
     "npm": ">=3"
