moved server within build

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "build": "cross-env NODE_ENV=production webpack --config build/webpack/webpack.prod.babel.js --color -p",
     "build:clean": "rimraf ./dist/*",
     "build:dll": "node ./build/scripts/dependencies.js",
-    "start": "cross-env NODE_ENV=development node server",
-    "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node server",
+    "start": "cross-env NODE_ENV=development node build/server",
+    "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node build/server",
     "start:production": "npm run build && npm run start:prod",
-    "start:prod": "cross-env NODE_ENV=production node server",
+    "start:prod": "cross-env NODE_ENV=production node build/server",
     "pagespeed": "node ./build/scripts/pagespeed.js",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern build --ignore-pattern server/",
