--- a/package.json
+++ b/package.json
@@ -65,8 +65,7 @@
       "cross-env",
       "express",
       "ip",
-      "minimist",
-      "sanitize.css"
+      "minimist"
     ],
     "include": [
       "core-js",
@@ -76,8 +75,13 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.7.4",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1"
+    "eslint-plugin-import": "^1.10.0",
+    "lint-staged": "^1.0.2",
+    "offline-plugin": "^3.4.1",
+    "react": "^15.2.0",
+    "react-dom": "^15.2.0",
+    "stylelint": "^6.8.0",
+    "webpack": "^2.1.0-beta.15"
   },
   "devDependencies": {
     "babel-core": "^6.7.7",
@@ -93,7 +97,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
-    "chai-enzyme": "^0.4.2",
+    "chai-enzyme": "^0.5.0",
     "chalk": "^1.1.3",
     "cheerio": "^0.20.0",
     "compression": "^1.6.1",
@@ -101,8 +105,8 @@
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "enzyme": "^2.2.0",
-    "eslint": "^2.10.1",
-    "eslint-import-resolver-webpack": "^0.2.4",
+    "eslint": "^3.0.0",
+    "eslint-import-resolver-webpack": "^0.3.2",
     "eslint-plugin-import": "^1.8.0",
     "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-react": "^5.1.1",
@@ -112,7 +116,7 @@
     "exports-loader": "^0.6.3",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
+    "file-loader": "^0.9.0",
     "fontfaceobserver": "^1.7.1",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.16.0",
@@ -137,14 +141,13 @@
     "lodash": "^4.13.1",
     "minimist": "^1.2.0",
     "mocha": "^2.4.5",
-    "ngrok": "2.1.8",
+    "ngrok": "^2.2.1",
     "node-sass": "^3.8.0",
     "null-loader": "^0.1.1",
     "offline-plugin": "^3.2.0",
     "pre-commit": "^1.1.3",
     "psi": "^2.0.3",
     "rimraf": "^2.5.2",
-    "sanitize.css": "^3.3.0",
     "sass-loader": "^4.0.0",
     "shelljs": "^0.7.0",
     "sinon": "^2.0.0-pre",
