--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
   "engines": {
     "npm": ">=3"
   },
-  "author": "Max Stoiber",
-  "license": "MIT",
   "scripts": {
     "analyze": "node ./build/scripts/analyze.js",
     "prebuild": "npm run build:clean",
@@ -74,13 +72,9 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.7.4",
-    "eslint-plugin-import": "^1.10.0",
-    "lint-staged": "^1.0.2",
-    "offline-plugin": "^3.4.1",
+    "lodash": "^4.13.1",
     "react": "^15.2.0",
-    "react-dom": "^15.2.0",
-    "stylelint": "^6.8.0",
-    "webpack": "^2.1.0-beta.15"
+    "react-dom": "^15.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.7.7",
@@ -105,7 +99,7 @@
     "enzyme": "^2.2.0",
     "eslint": "^3.0.0",
     "eslint-import-resolver-webpack": "^0.3.2",
-    "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-import": "^1.10.0",
     "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-react": "^5.1.1",
     "eventsource-polyfill": "^0.9.6",
@@ -135,14 +129,14 @@
     "karma-safari-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
-    "lint-staged": "^1.0.1",
+    "lint-staged": "^1.0.2",
     "lodash": "^4.13.1",
     "minimist": "^1.2.0",
     "mocha": "^2.4.5",
     "ngrok": "^2.2.1",
     "node-sass": "^3.8.0",
     "null-loader": "^0.1.1",
-    "offline-plugin": "^3.2.0",
+    "offline-plugin": "^3.4.1",
     "pre-commit": "^1.1.3",
     "psi": "^2.0.3",
     "rimraf": "^2.5.2",
@@ -150,9 +144,9 @@
     "shelljs": "^0.7.0",
     "sinon": "^2.0.0-pre",
     "style-loader": "^0.13.1",
-    "stylelint": "^6.3.3",
+    "stylelint": "^6.8.0",
     "url-loader": "^0.5.7",
-    "webpack": "^2.1.0-beta.13",
+    "webpack": "^2.1.0-beta.15",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0",
     "whatwg-fetch": "^1.0.0"
