--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "fontfaceobserver": "^1.7.1",
+    "fs-extra": "^0.30.0",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.16.0",
     "image-webpack-loader": "^1.8.0",
