--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   "dependencies": {
     "babel-polyfill": "^6.7.4",
     "lodash": "^4.13.1",
+    "polymer": "^0.5.0",
     "react": "^15.2.0",
     "react-dom": "^15.2.0"
   },
