--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "build:dll": "node ./build/scripts/dependencies.js",
     "start": "cross-env NODE_ENV=development node build/server",
     "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node build/server",
-    "start:production": "npm run build && npm run start:prod",
-    "start:prod": "cross-env NODE_ENV=production node build/server",
+    "start:prod": "npm run build && cross-env NODE_ENV=production node build/server",
     "pagespeed": "node ./build/scripts/pagespeed.js",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern build --ignore-pattern server/",
@@ -73,9 +72,9 @@
   "dependencies": {
     "babel-polyfill": "^6.7.4",
     "lodash": "^4.13.1",
-    "polymer": "^0.5.0",
     "react": "^15.2.0",
-    "react-dom": "^15.2.0"
+    "react-dom": "^15.2.0",
+    "webcomponentsjs": "^1.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.7.7",
@@ -113,7 +112,7 @@
     "fontfaceobserver": "^1.7.1",
     "fs-extra": "^0.30.0",
     "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.16.0",
+    "html-webpack-plugin": "^2.22.0",
     "image-webpack-loader": "^1.8.0",
     "imports-loader": "^0.6.5",
     "ip": "^1.1.2",
