--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
             "experimentalObjectRestSpread": true
         }
     },
-    "plugins": ["react"],
+    "plugins": ["react", "import"],
     "env": {
         "browser": true,
         "es6": true,
@@ -255,6 +255,20 @@
         "react/prefer-es6-class": 2,
         "react/prop-types": 1,
         "react/react-in-jsx-scope": 2,
-        "react/wrap-multilines": 2
+        "react/wrap-multilines": 2,
+
+        "import/imports-first": 2,
+        "import/newline-after-import": 1,
+        "import/no-extraneous-dependencies": 0,
+        "import/no-named-as-default": 1,
+        "import/no-unresolved": 0,
+        "import/prefer-default-export": 0
+    },
+    "settings": {
+        "import/resolver": {
+            "webpack": {
+              "config": "./build/webpack/webpack.dev.babel.js"
+            }
+        }
     }
 }
