--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-boilerplate",
+  "name": "epicenter-ui-template-builder",
   "version": "0.0.0",
   "repository": {
     "type": "git"
@@ -10,10 +10,13 @@
   "scripts": {
     "analyze": "node ./build/scripts/analyze.js",
     "prebuild": "npm run build:clean",
-    "build": "cross-env NODE_ENV=production webpack --config build/webpack/webpack.prod.babel.js --color -p",
+    "build": "npm run build:projectfiles && npm run build:main",
+    "build:projectfiles": "cross-env NODE_ENV=production webpack --config build/webpack/webpack.projectfiles.babel.js --color -p",
+    "build:main": "cross-env NODE_ENV=production webpack --config build/webpack/webpack.prod.babel.js --color -p",
     "build:clean": "rimraf ./dist/*",
     "build:dll": "node ./build/scripts/dependencies.js",
-    "start": "cross-env NODE_ENV=development node build/server",
+    "dev:projectfiles": "cross-env NODE_ENV=development PORT=8089 WEBPACK_CONFIG=projectfiles.dev node build/server",
+    "start": "cross-env NODE_ENV=development PORT=3000 WEBPACK_CONFIG=dev node build/server",
     "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node build/server",
     "start:prod": "npm run build && cross-env NODE_ENV=production node build/server",
     "pagespeed": "node ./build/scripts/pagespeed.js",
@@ -35,9 +38,9 @@
   },
   "babel": {
     "presets": [
-      "es2015-webpack",
-      "react",
-      "stage-0"
+        ["es2015", { "modules": false }],
+        "react",
+        "stage-0"
     ],
     "env": {
       "production": {
@@ -47,7 +50,8 @@
         "plugins": [
           "transform-react-remove-prop-types",
           "transform-react-constant-elements",
-          "transform-react-inline-elements"
+          "transform-react-inline-elements",
+          "transform-object-assign"
         ]
       }
     }
@@ -56,7 +60,6 @@
     "path": "node_modules/react-boilerplate-dlls",
     "exclude": [
       "chalk",
-      "compression",
       "cross-env",
       "express",
       "ip",
@@ -71,24 +74,28 @@
   "dependencies": {
     "babel-polyfill": "^6.7.4",
     "bootstrap-sass": "^3.3.6",
-    "lodash": "^4.13.1",
-    "react": "^15.2.0",
-    "react-dom": "^15.2.0",
-    "webcomponentsjs": "^1.0.2"
+    "jquery": "^3.1.0",
+    "lodash": "^4.15.0",
+    "react": "^15.3.0",
+    "react-addons-css-transition-group": "^15.2.1",
+    "react-bootstrap": "^0.29.5",
+    "react-dom": "^15.3.0",
+    "react-select": "^0.9.1"
   },
   "devDependencies": {
-    "babel-core": "^6.7.7",
+    "babel-core": "^6.13.2",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-plugin-transform-react-constant-elements": "^6.8.0",
     "babel-plugin-transform-react-inline-elements": "^6.8.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.2.7",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-es2015-webpack": "^6.4.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.9",
+    "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
+    "browser-info": "^1.0.0",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.5.0",
     "chalk": "^1.1.3",
@@ -97,9 +104,10 @@
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "enzyme": "^2.2.0",
-    "eslint": "^3.0.0",
+    "epicenter-js": "github:forio/epicenter-js-libs#dms3-version",
+    "eslint": "^3.3.0",
     "eslint-import-resolver-webpack": "^0.3.2",
-    "eslint-plugin-import": "^1.10.0",
+    "eslint-plugin-import": "^1.13.0",
     "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-react": "^5.1.1",
     "eventsource-polyfill": "^0.9.6",
@@ -107,49 +115,50 @@
     "expect-jsx": "^2.5.1",
     "exports-loader": "^0.6.3",
     "express": "^4.13.4",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0-beta.3",
     "file-loader": "^0.9.0",
     "fontfaceobserver": "^1.7.1",
     "fs-extra": "^0.30.0",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
+    "http-proxy-middleware": "^0.17.1",
     "image-webpack-loader": "^1.8.0",
     "imports-loader": "^0.6.5",
     "ip": "^1.1.2",
     "isparta": "^4.0.0",
     "isparta-loader": "^2.0.0",
     "json-loader": "^0.5.4",
-    "karma": "^1.1.0",
+    "karma": "^1.2.0",
     "karma-chrome-launcher": "^1.0.1",
-    "karma-coverage": "^1.0.0",
+    "karma-coverage": "^1.1.1",
     "karma-firefox-launcher": "^1.0.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.0.1",
-    "karma-mocha-reporter": "^2.0.3",
+    "karma-mocha-reporter": "^2.1.0",
     "karma-phantomjs-launcher": "^1.0.1",
     "karma-safari-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.7.0",
+    "karma-webpack": "^1.8.0",
     "lint-staged": "^1.0.2",
     "lodash": "^4.13.1",
     "minimist": "^1.2.0",
     "mocha": "^2.4.5",
-    "ngrok": "^2.2.1",
+    "ngrok": "^2.2.2",
     "node-sass": "^3.8.0",
     "null-loader": "^0.1.1",
     "offline-plugin": "^3.4.1",
     "pre-commit": "^1.1.3",
     "psi": "^2.0.3",
-    "rimraf": "^2.5.2",
+    "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
-    "shelljs": "^0.7.0",
+    "shelljs": "^0.7.3",
     "sinon": "^2.0.0-pre",
     "style-loader": "^0.13.1",
     "stylelint": "^6.8.0",
     "url-loader": "^0.5.7",
-    "webpack": "^2.1.0-beta.15",
+    "webpack": "^2.1.0-beta.20",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0",
+    "webpack-hot-middleware": "^2.12.2",
     "whatwg-fetch": "^1.0.0"
   }
 }
